# chat-ollama

./: Cargo.toml  README.md
src/: a_conversition.rs  app.rs  event_loop.rs  input.rs  main.rs
src/view/: wgpu.rs
