[package]
name = "chat-ollama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
winit = "0.29.5"
wgpu = "0.17"
